Fixed hamburger icon to remove white space and fixed bug on hover that did not work

--- a/crohns-website/styles/crohns-design.css
+++ b/crohns-website/styles/crohns-design.css
@@ -122,7 +122,10 @@ nav .menu-item{
 .menu-hover{
     display: none;
 }
-.menu-hover:hover{
+.menu-item:hover #hamburger{
+    display: none;
+}
+.menu-item:hover .menu-hover{
     display: block;
     z-index: 1;
 }
